overflow bugs

--- a/styled.css
+++ b/styled.css
@@ -4,7 +4,6 @@ body {
   width: 100vw;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  overflow: hidden;
 }
 
 .popup {
